--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tsparticles/react": "^3.0.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next": "^16.1.0",
@@ -15,7 +16,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-tsparticles": "^2.12.2",
     "three": "^0.181.1",
+    "tsparticles": "^3.9.1",
     "vanta": "^0.5.24"
   },
   "devDependencies": {
